--- a/assign2/public/styles2.css
+++ b/assign2/public/styles2.css
@@ -1,8 +1,18 @@
-/* Selectors */
+:root { box-sizing: border-box; }
+* { box-sizing: inherit; }
+
+
+/* 1 */
 * {
   font-family: sans-serif;
 }
 
+header h1 {
+  font-size: x-large;
+  margin-left: 5rem;
+}
+
+/* 2 */
 header {
   background-color: #202020;
   color: white;
@@ -13,11 +23,7 @@ header {
   margin: 0;
 }
 
-header h1 {
-  font-size: x-large;
-  margin-left: 5rem;
-}
-
+/* 3 */
 #addCard {
   display: flex;
   align-items: center;
@@ -43,6 +49,7 @@ header h1 {
   padding: 0.25rem 1rem;
 }
 
+/* 4 & 5 & 7 */
 body {
   display: flex;
   flex-direction: column;
@@ -85,6 +92,8 @@ body {
   padding: 0.5rem;
   position: relative;
 }
+
+/* 6 */
 
 .buttons {
   display: none;
